tdf#162358 Fix missing fallback run inside grapheme cluster

This change fixes an issue causing certain diacritics to be rendered as
the replacement character. The root cause was failing to consistently
populate fallback runs for the first grapheme cluster, when a layout
begins inside a grapheme cluster.

Change-Id: I7ce368c815d33b26fc05d726d4f4efd050ed9a17
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171607
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
Tested-by: Jenkins
(cherry picked from commit e459d2dc2ddafa14c442132493e39b987892cd16)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172068
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>